--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@ h1 {
   loop = function () {
   	g.update();
   	window.setTimeout(function() {loop()}, 1000 / 30);
-  	// $(".button#dig").click();
+  	
+  	// My treat ;)
+  	$(".button#dig").click(); 
   	
   }
 
