--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@ h1 {
   		$("#game-3").show();
   
   	}
+  	$(this).removeClass("badge");
   	$(".menu-item").removeClass("active");
   	$(this).addClass("active")
   });
